@@ -375,9 +375,8 @@ public class DeltaProcessor {
 			ICElementDelta[] result = new ICElementDelta[index];
 			System.arraycopy(realDeltas, 0, result, 0, index);
 			return result;
-		} else {
-			return NO_DELTA;
 		}
+		return NO_DELTA;
 	}
 
 	/**
@@ -430,9 +429,14 @@ public class DeltaProcessor {
 			IResource resource = delta.getResource();
 			ICElement current = createElement(resource);
 			updateChildren = updateCurrentDeltaAndIndex(delta);
-			if (current == null || current instanceof ISourceRoot ||
-					(current instanceof ICProject && !((ICProject)current).getProject().isOpen())) {
+			if (current == null || current instanceof ISourceRoot) {
 				nonCResourcesChanged(parent, delta);
+			} else if (current instanceof ICProject) {
+				ICProject cprj = (ICProject)current;
+				CModel cModel = CModelManager.getDefault().getCModel();
+				if (!cprj.getProject().isOpen() || cModel.findCProject(cprj.getProject()) == null) {
+					nonCResourcesChanged(parent, delta);
+				}
 			} else {
 				parent = current;
 			}
